--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     }
   ],
   "liveSassCompile.settings.includeItems": [
-    "/scss/main.scss",
+    "/sass/main.scss",
 ],
   "liveSassCompile.settings.generateMap": true,
   "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
